--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                  <div class="col-md-4">
                     <div class="icon-inner">
 
-                    <img src="images/icon.png" alt="icon">
+                    <img src="images/Icon.png" alt="icon">
                      <h4>Optimized for All devices</h4>
                      <p>STRICT has been designed to be fully<br> 
                                 responsive on all devices</p>
@@ -120,7 +120,7 @@
                 <div class="col-md-4">
                     <div class="icon-inner">
 
-                    <img src="images/icon 2.png" alt="icon" >
+                    <img src="images/Icon 2.png" alt="icon" >
                      <h4>Clean & Minimal Design</h4>
                      <p>This multipurpose theme is especially created <br>
                                  to be used for different projects.</p>
@@ -133,7 +133,7 @@
                       <div class="icon-inner">
 
                     
-                    <img src="images/icon3.png" alt="icon" >
+                    <img src="images/Icon3.png" alt="icon" >
                      <h4>Font Awesome Icon</h4>
                      <p>This multipurpose theme is especially created <br>
                                 to be used for different projects.</p>
