--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" >
 
     <!-- Font-Awesome CSS linking here -->
-    <link rel="stylesheet" type="text/css" href="CSS/font-awesome.min.css">
+    <link rel="stylesheet" href="CSS/font-awesome.min.css">
     <title>Strict</title>
 
 
