--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="CSS/bootstrap.min.css" >
 
     <!-- Font-Awesome CSS linking here -->
     <link rel="stylesheet" href="CSS/font-awesome.min.css">
